# raymarcher

./: CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
src/: bindable.hpp  glad.cpp  main.cpp  screen.cpp  screen.hpp  util.cpp  util.hpp  world.cpp  world.hpp
src/application/: application.cpp  application.hpp  input.cpp  input.hpp  window.cpp  window.hpp
src/application/gui/: gui.cpp  gui.hpp  shape_menu.cpp  shape_menu.hpp  shape_tree.cpp  shape_tree.hpp
src/camera/: camera.cpp  camera.hpp  center_camera.hpp
src/components/: transform.cpp  transform.hpp
src/objects/: camera.cpp  camera.hpp  game_object.cpp  game_object.hpp  objects.hpp  player.cpp  player.hpp
src/objects/camera/: camera.hpp  center_camera.cpp  center_camera.hpp
src/objects/shapes/: box.cpp  box.hpp  fractal.cpp  fractal.hpp  shape.cpp  shape.hpp  shape_holder.cpp  shape_holder.hpp  sphere.cpp  sphere.hpp
src/shader/: raymarcher.cpp  raymarcher.hpp  shader.cpp  shader.hpp  shader_builder.cpp  shader_builder.hpp
src/shaders/: compute.glsl  fragment.glsl  vertex.glsl
src/world/: world.cpp  world.hpp
